# botcalcl

./: .replit  pyproject.toml
replit_postgres_bot/: .env.example  README.md  flask_server.py  http_server.py  main.py  requirements.txt  история.xlsx
